Fixed CSS on mobile...hopefully

--- a/sketchStyle.css
+++ b/sketchStyle.css
@@ -7,7 +7,6 @@ body {
 }
 .p5Canvas {
     margin: 0;
-    padding: 0;
     border: 0;
-    width: 100%;
+    padding: 0;
 }
